# cinematch-hybrid-recommender-python

./: .gitignore  GITHUB_SUBMISSION.md  LICENSE  README.md  pyproject.toml
data/sample/: u.data  u.item
docs/: RESULTS.md
outputs_sample/: cold_results.json  cold_results.md  cold_split.json  dataset_summary.json  demo.html  demo_recommendations.json  mf_model.json  mf_training_history.csv  warm_results.json  warm_results.md
scripts/: download_movielens100k.py
src/cinematch/: __init__.py  cli.py  cold_start.py  data.py  evaluation.py  recommender.py  reporting.py  utils.py
src/cinematch/models/: __init__.py  hybrid.py  item_knn.py  matrix_factorization.py  popularity.py
tests/: test_pipeline.py
