[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinematch-hybrid-recommender"
version = "1.0.0"
description = "A Python hybrid movie recommender with warm-start and cold-start ML pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
cinematch = "cinematch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
